# percona_pg_telemetry

./: .gitignore  .licenserc.yaml  LICENSE  Makefile  README.md  meson.build  percona_pg_telemetry--1.0--1.1.sql  percona_pg_telemetry--1.0.sql  percona_pg_telemetry--1.1--1.2.sql  percona_pg_telemetry.c  percona_pg_telemetry.conf  percona_pg_telemetry.control  percona_pg_telemetry.h  percona_telemetry--1.0.sql  percona_telemetry.c  percona_telemetry.conf  percona_telemetry.control  percona_telemetry.h  pt_json.c  pt_json.h  typedefs.list
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: check.yml  postgresql-12-build.yml  postgresql-13-build.yml  postgresql-14-build.yml  postgresql-15-build.yml  postgresql-16-build.yml  postgresql-17-build.yml  postgresql-18-build.yml  scorecard.yml
expected/: basic.out  basic_1.out  debug_json.out  gucs.out  gucs_1.out
percona-packaging/rpm/: pg-percona-telemetry.spec
percona-packaging/scripts/: pg_percona_telemetry_builder.sh
sample/: percona_telemetry.sample.json  percona_telemetry.sample_v1.0.0.json  percona_telemetry.sample_v1.1.0.json
sql/: basic.sql  debug_json.sql  gucs.sql
